--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="C:\Users\sarva\Desktop\Web Development\My First Webpage\styles.css">
+    <link rel="stylesheet" href="styles.css">
 
 
     <meta charset="utf-8">
